--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,9 @@ jobs:
       uses: docker/login-action@v3
       id: login-ocir
       with:
-         registry: https://iad.ocir.io
-         username: ${{ secrets.IT_ADMIN_USER_ID }}
-         password: ${{ secrets.IT_ADMIN_AUTH_TOKEN }}
+         registry: https://hub.docker.com/
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
          
      
     - name: Tag docker image
