--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,8 @@ jobs:
      
     - name: Tag docker image
       run: |
-         docker tag go-web-app:latest iad.ocir.io/idjm2yj32zav/cr20-spr14:go-web-app       
+         docker tag go-web-app:latest karthikeyudu/go-web-app:$(BUILD_NUBER)       
          
     - name: Push Docker Image to ocir
       run: | 
-           docker push iad.ocir.io/idjm2yj32zav/cr20-spr14:go-web-app
+           docker push karthikeyudu/go-web-app:$(BUILD_NUBER)
